@@ -4,6 +4,7 @@ Upcoming:
 - Flattening/interpolation of the heightmap now goes to build limit
 - New avoidStructures server config option to avoid generating Lost Cities in chunks that have structures. By default the following structures are avoided (besides villages): mansions, igloos, swamp huts, and temples
 - Fixed a problem where sometimes you could have floating trees
+- Greatly extended the palette that can be exported by the exportpart command. It now includes a lot of unicode characters as well
 
 1.21-8.0.0:
 - Port to 1.21
